opçao batch adicionada. versao 1.0